convert to Nama style

--- a/essal/templates/includes/navbar/navbar_items.html
+++ b/essal/templates/includes/navbar/navbar_items.html
@@ -8,9 +8,9 @@
 		{%- endfor %}
 		-->
 		<a class="btn slogan-desc" href="/home">الرئيسية</a>
-		<a class="btn slogan-desc" href="/about-us">تعرف على هُدهُد</a>
+		<a class="btn slogan-desc" href="/about-us">تعرف على نماء</a>
 		<a class="btn slogan-desc" href="/features">المميزات</a>
-		<a class="btn slogan-desc" href="/join_us">اشترك مع هُدهُد</a>
+		<a class="btn slogan-desc" href="/join_us">اشترك مع نماء</a>
 		<a class="btn slogan-desc" href="/contact-us">اتصل بنا</a>
 	</ul>
 
