--- a/essal/templates/pages/about-us.html
+++ b/essal/templates/pages/about-us.html
@@ -1,13 +1,13 @@
 {% extends "templates/web.html" %}
 
-{% block title %} حول هُدهُد {% endblock %}
+{% block title %} حول نماء {% endblock %}
 
 {% block page_banner %}
 
       <div class="page-banner page-banner-subpage p-b-0">
             <div class="container">
                 <div class="banner-slogan banner-slogan-hero">
-                    <h1 class="slogan-title text-center">أهلا بك في هُدهُد  </h1>
+                    <h1 class="slogan-title text-center">أهلا بك في نماء  </h1>
 
                     <h2 class="slogan-desc text-center"> <span class="out-goal-txt">رسالتنا:</span> توفير منظومة إدارية متكاملة للجمعيات الخيرية، ذات إحترافية وكفائة عالية، وتتميز بخدمة دعم فني متكاملة، لنحقق بذلك أعلى رضا لعملائنا الذين هم جوهر نجاحنا.</h2>
                 </div>
@@ -15,9 +15,9 @@
                   <div class="banner-tabs tabs-responsive">
                        <div class="tabs-container">
                             <ul class="nav nav-tabs text-center">
-                                <li class="active"><a href="/about-us">عن هُدهُد</a></li>
+                                <li class="active"><a href="/about-us">عن نماء</a></li>
 {#                                <li><a href="/team.html">طاقم العمل</a></li>#}
-                                <!--<li><a href="/testimonial.html">روايات هُدهُد</a></li>-->
+                                <!--<li><a href="/testimonial.html">روايات نماء</a></li>-->
                                 <li class=""><a href="/contact-us">اتصل بنا</a></li>
                             </ul>
                            <button class="btn btn-icon btn-link btn-prev" type="button" data-click="prev-tab"><i class="zmdi zmdi-chevron-left"></i></button>
@@ -61,7 +61,7 @@
 {#                            <div class="display-3 text-primary features-more-display">#}
 {#                            </div>#}
 {#                            <p>#}
-{#                                عدد المستخدمين الذين يثقون بهُدهُد ويعتمدون عليه، يزداد يوما بعد يوم، فهو يوفر لهم جميع ما يحتاجونه لإدارة شركاتهم، من أي مكان، وفي أي وقت، وبكل سهولة أيضا.#}
+{#                                عدد المستخدمين الذين يثقون بنماء ويعتمدون عليه، يزداد يوما بعد يوم، فهو يوفر لهم جميع ما يحتاجونه لإدارة شركاتهم، من أي مكان، وفي أي وقت، وبكل سهولة أيضا.#}
 {#                            </p>#}
 {#                        </div>#}
 {#                        <div class="col-sm-3 col-xs-6" style="padding-top: 5px;">#}
@@ -69,7 +69,7 @@
 {#                            </div>#}
 {#                            <p>#}
 {##}
-{#                                 يعتمد عملاء هُدهُد في جميع معاملاتهم على الخدمات السحابية التي تقدمها هُدهُد فهي أكثر احترافية وأقل تكلفة.#}
+{#                                 يعتمد عملاء نماء في جميع معاملاتهم على الخدمات السحابية التي تقدمها نماء فهي أكثر احترافية وأقل تكلفة.#}
 {##}
 {#                            </p>#}
 {#                        </div>#}
@@ -77,7 +77,7 @@
 {#                            <div class="display-3 text-primary features-more-display">#}
 {#                            </div>#}
 {#                            <p>#}
-{#                                أنظمة هُدهُد الإدارية تساعد أصحاب الشركات والمؤسسات على التحكم بجميع جوانبها بأسهل الطرق وأسرعها.#}
+{#                                أنظمة نماء الإدارية تساعد أصحاب الشركات والمؤسسات على التحكم بجميع جوانبها بأسهل الطرق وأسرعها.#}
 {##}
 {#                            </p>#}
 {#                        </div>#}
@@ -85,7 +85,7 @@
 {#                            <div class="display-3 text-primary features-more-display">#}
 {#                            </div>#}
 {#                            <p>#}
-{#                                نحن نسعد بعملائنا ونفخر بمساعدتهم للاستفادة من أفضل مميزات هُدهُد، حيث يعمل فريقنا للإجابة على أكثرمن 2000 استفسار شهريا.#}
+{#                                نحن نسعد بعملائنا ونفخر بمساعدتهم للاستفادة من أفضل مميزات نماء، حيث يعمل فريقنا للإجابة على أكثرمن 2000 استفسار شهريا.#}
 {##}
 {#                            </p>#}
 {#                        </div>#}
@@ -97,7 +97,7 @@
 
         <div class="page-section">
             <div class="container">
-                <h2 class="section-title text-center">ما يميز هُدهُد</h2>
+                <h2 class="section-title text-center">ما يميز نماء</h2>
 
                 <div class="features features-icon-right">
                     <div class="row">
@@ -119,7 +119,7 @@
                                 <h3 class="h4">آمن</h3>
 
                                 <p>
-                                    الأمن أولا وقبل كل شيء فهُدهُد يحفظ بياناتك بعيدا عن كل المخاطر ويستخدم أفضل تقنيات حماية البيانات عاليما
+                                    الأمن أولا وقبل كل شيء فنماء يحفظ بياناتك بعيدا عن كل المخاطر ويستخدم أفضل تقنيات حماية البيانات عاليما
 
                                 </p>
                             </div>
@@ -132,7 +132,7 @@
                                 <h3 class="h4">الدعم الفني</h3>
 
                                 <p>
-                                    لا تقلق مهما كانت المشكلة التي تواجهها فمع آليات الدعم الفني المتوفرة في هُدهُد بإمكانك الحصول على أفضل الحلول بأسرع وقت ووأفضل كفائة
+                                    لا تقلق مهما كانت المشكلة التي تواجهها فمع آليات الدعم الفني المتوفرة في نماء بإمكانك الحصول على أفضل الحلول بأسرع وقت ووأفضل كفائة
 
                                 </p>
                             </div>
@@ -145,7 +145,7 @@
                                 <h3 class="h4">التحديث</h3>
 
                                 <p>
-                                    يضمن هُدهُد استخدام أحدث التقنيات في عالم التكنولوجيا، والتي تجعل أنظمته في مطلع أنظمة إدارة المنشئات عالميا
+                                    يضمن نماء استخدام أحدث التقنيات في عالم التكنولوجيا، والتي تجعل أنظمته في مطلع أنظمة إدارة المنشئات عالميا
 
                                 </p>
                             </div>
@@ -158,7 +158,7 @@
                                 <h3 class="h4">متوافق</h3>
 
                                 <p>
-                                    ما يميز هُدهُد توافقه مع جميع شاشات العرض فبإمكانك الإدارة والتحكم بموارد الجمعية من الجوال أو التابلت أو من حاسوبك الشخصي
+                                    ما يميز نماء توافقه مع جميع شاشات العرض فبإمكانك الإدارة والتحكم بموارد الجمعية من الجوال أو التابلت أو من حاسوبك الشخصي
 
                                 </p>
                             </div>
@@ -185,13 +185,13 @@
 		<div class="page-section section-blue section-center">
 		<div class="container">
 
-            <h2 class="section-title">حلّق مع هُدهُد</h2>
+            <h2 class="section-title">حلّق مع نماء</h2>
 
             <a class="btn btn-primary-light btn-lg" href="/join_us">
                 اشترك الآن
             </a>
 
-{#			<h2 class="section-title">اشترك اﻵن في هُدهُد</h2>#}
+{#			<h2 class="section-title">اشترك اﻵن في نماء</h2>#}
 {##}
 {#			<form method="post" action="" class="register-form">#}
 {#				<input type="hidden" name="action" value="register"/>#}
