--- a/essal/templates/pages/common_questions.html
+++ b/essal/templates/pages/common_questions.html
@@ -33,12 +33,12 @@
                             <ul class="nav nav-sidebar affix-top">
                                 <li class="">
                                     <a href="#essal-information">
-                                        معلومات عن نظام هُدهُد
+                                        معلومات عن نظام نماء
                                     </a>
                                 </li>
                                 <li class="">
                                     <a href="#registration-packages">
-                                        التسجيل والباقات في هُدهُد
+                                        التسجيل والباقات في نماء
                                     </a>
                                 </li>
                                 <li class="">
@@ -53,16 +53,16 @@
                 <div class="col-sm-8" style="text-align: right;">
                     <div id="essal-information" class="content-row">
                         <h2 class="m-t-0">
-                            معلومات عن نظام هُدهُد
+                            معلومات عن نظام نماء
                         </h2>
                         <h3 style="color: #1e88e5;" class="h4">
 
-                            ما هو نظام هُدهُد لإدارة الأعمال؟
+                            ما هو نظام نماء لإدارة الأعمال؟
 
                         </h3>
                         <p>
 
-                            نظام هُدهُد هو منظومة متكاملة من برامج الإدارية والمالية المترابطة تساعدك على
+                            نظام نماء هو منظومة متكاملة من برامج الإدارية والمالية المترابطة تساعدك على
                             إدارة وتشغيل الجمعية في أي وقت ومن أي مكان من خلال الانترنت.
 
                         </p>
@@ -70,7 +70,7 @@
                         <h3 style="color: #1e88e5;" class="h4">
 
 
-                            ما هي الوحدات التي يتضمنها نظام هُدهُد؟
+                            ما هي الوحدات التي يتضمنها نظام نماء؟
 
 
                         </h3>
@@ -128,7 +128,7 @@
                         <h3 style="color: #1e88e5;" class="h4">
 
 
-                            ما هي الجمعيات التي يخدمها نظام هُدهُد لإدارة الأعمال؟
+                            ما هي الجمعيات التي يخدمها نظام نماء لإدارة الأعمال؟
 
 
                         </h3>
@@ -156,13 +156,13 @@
                         <h3 style="color: #1e88e5;" class="h4" id="vat">
 
 
-                            هل يخدم نظام هُدهُد الجمعيات خارج السعودية؟
+                            هل يخدم نظام نماء الجمعيات خارج السعودية؟
 
 
                         </h3>
 
                         <p>
-                            حاليا لا, هُدهُد يخدم الجمعيات السعودية.
+                            حاليا لا, نماء يخدم الجمعيات السعودية.
                         </p>
 
 
@@ -171,13 +171,13 @@
 
                     {#<div id="registration-packages" class="content-row">
                         <h2 class="m-t-0">
-                            التسجيل والباقات في هُدهُد
+                            التسجيل والباقات في نماء
 
                         </h2>
                         <h3 style="color: #1e88e5;" class="h4">
 
 
-                            هل يوجد تسجيل تجريبي في نظام هُدهُد؟
+                            هل يوجد تسجيل تجريبي في نظام نماء؟
 
 
                         </h3>
@@ -205,7 +205,7 @@
                         <h3 style="color: #1e88e5;" class="h4">
 
 
-                            كيف يمكنني الاشتراك في أحد باقات نظام هُدهُد لإدارة الأعمال؟ وكيف يتم تصنيف
+                            كيف يمكنني الاشتراك في أحد باقات نظام نماء لإدارة الأعمال؟ وكيف يتم تصنيف
                             الباقات؟
 
 
@@ -239,7 +239,7 @@
                         </h3>
                         <p>
 
-                            يتميز نظام هُدهُد لإدارة الأعمال بخاصية الدعم الفني المتكاملة والمفصلة التي تتوفر
+                            يتميز نظام نماء لإدارة الأعمال بخاصية الدعم الفني المتكاملة والمفصلة التي تتوفر
                             في ملفات دعم فني متكاملة وفيديوهات شرح تفصيلية عن كل وحدة على حدا، تُمكن
                             المستخدم من التعامل مع كافة أجزاء النظام، وأيضا يتوفر فريق دعم فني متكامل على
                             مدار الساعة.
@@ -265,14 +265,14 @@
 
 
                             هل يستطيع مسؤول الجمعية نقل البيانات من الجمعية إلى النظام مباشرة للبدء باستخدام
-                            نظام هُدهُد؟
+                            نظام نماء؟
 
 
                         </h3>
 
                         <p>
 
-                            نعم يستطيع نقل البيانات على ملف اكسل ويقوم فريق البرمجة الخاصة بنظام هُدهُد
+                            نعم يستطيع نقل البيانات على ملف اكسل ويقوم فريق البرمجة الخاصة بنظام نماء
                             بنقلها للنظام لاستخدامها من قبل مسؤول الجمعية مباشرة مع الحفاظ على السرية التامة
                             لبيانات مسؤول الجمعية.
 
@@ -286,13 +286,13 @@
         <!-- /.page-section -->
         <div class="page-section section-blue section-center">
             <div class="container">
-                <h2 class="section-title">حلّق مع هُدهُد</h2>
+                <h2 class="section-title">حلّق مع نماء</h2>
 
                 <a class="btn btn-primary-light btn-lg" href="/join_us">
                     اشترك الآن
                 </a>
 
-{#                <h2 class="section-title">اشترك اﻵن في هُدهُد</h2>#}
+{#                <h2 class="section-title">اشترك اﻵن في نماء</h2>#}
 {##}
 {#                <form method="post" action="" class="register-form">#}
 {#                    <input type="hidden" name="action" value="register"/>#}
