--- a/essal/templates/pages/details.html
+++ b/essal/templates/pages/details.html
@@ -7,7 +7,7 @@
 			<div class="container">
 				<div class="banner-slogan banner-slogan-hero">
 					<h1 class="slogan-title text-center">  المميزات  </h1>
-					<h2 class="slogan-desc text-center">اشترك الآن وتمتع باستخدام مزايا وتطبيقات هُدهُد، مع الإعداد والتدريب مجاناً</h2>
+					<h2 class="slogan-desc text-center">اشترك الآن وتمتع باستخدام مزايا وتطبيقات نماء، مع الإعداد والتدريب مجاناً</h2>
 				</div>
 			</div>
 			<!-- /.banner-tabs -->
@@ -56,13 +56,13 @@
 	<!-- /.page-section -->
 		<div class="page-section section-blue section-center">
 		<div class="container">
-            <h2 class="section-title">حلّق مع هُدهُد</h2>
+            <h2 class="section-title">حلّق مع نماء</h2>
 
             <a class="btn btn-primary-light btn-lg" href="/join_us">
                 اشترك الآن
             </a>
 
-{#			<h2 class="section-title">اشترك اﻵن في هُدهُد</h2>#}
+{#			<h2 class="section-title">اشترك اﻵن في نماء</h2>#}
 {##}
 {#			<form method="post" action="" class="register-form">#}
 {#				<input type="hidden" name="action" value="register"/>#}
