--- a/essal/templates/pages/essal_blog.html
+++ b/essal/templates/pages/essal_blog.html
@@ -1,12 +1,12 @@
 {% extends "templates/web.html" %}
 
-{% block title %} مدونة هُدهُد  {% endblock %}
+{% block title %} مدونة نماء  {% endblock %}
 
 {% block page_banner %}
 <div class="page-banner page-banner-subpage p-b-0">
     <div class="container">
         <div class="banner-slogan banner-slogan-hero">
-            <h1 class="slogan-title text-center"> مدونة هُدهُد </h1>
+            <h1 class="slogan-title text-center"> مدونة نماء </h1>
         </div>
     </div>
     <!-- /.banner-tabs -->
@@ -120,13 +120,13 @@
     <!-- /.page-section -->
     <div class="page-section section-blue section-center">
         <div class="container">
-            <h2 class="section-title">حلّق مع هُدهُد</h2>
+            <h2 class="section-title">حلّق مع نماء</h2>
 
             <a class="btn btn-primary-light btn-lg" href="/join_us">
                 اشترك الآن
             </a>
 
-{#            <h2 class="section-title">اشترك اﻵن في هُدهُد</h2>#}
+{#            <h2 class="section-title">اشترك اﻵن في نماء</h2>#}
 {##}
 {#            <form method="post" action="" class="register-form">#}
 {#                <input type="hidden" name="action" value="register"/>#}
