--- a/essal/templates/pages/home.html
+++ b/essal/templates/pages/home.html
@@ -38,7 +38,7 @@
                 {#                </form>#}
 
                 <a class="btn btn-primary-light btn-lg" href="/join_us">
-                    اشترك مع هُدهُد
+                    اشترك مع نماء
                 </a>
 
                 <div class="partners hidden-xs">
@@ -133,7 +133,7 @@
 
     <div class="page-section section-center">
         <div class="container">
-            <h2 class="section-title">لماذا هُدهُد؟</h2>
+            <h2 class="section-title">لماذا نماء؟</h2>
 
             <div class="services">
                 <div class="row">
@@ -164,7 +164,7 @@
                             <i class="service-icon service-icon-dedicated image-shadow-sm animate zoomIn"></i>
                             <div class="service-body">
                                 <h3>نظام سحابي متكامل</h3>
-                                <p>جميع البيانات مخزنة سحابياً مع إمكانية الدخول لهُدهُد من أي مكان دون تكاليف إعداد أو
+                                <p>جميع البيانات مخزنة سحابياً مع إمكانية الدخول لنماء من أي مكان دون تكاليف إعداد أو
                                     صيانة</p>
                             </div>
                         </a>
@@ -266,7 +266,7 @@
     <!-- /.page-section -->
     <div class="page-section section-blue section-center">
         <div class="container">
-            <h2 class="section-title">حلّق مع هُدهُد</h2>
+            <h2 class="section-title">حلّق مع نماء</h2>
 
             <a class="btn btn-primary-light btn-lg" href="/join_us">
                 اشترك الآن
