--- a/essal/templates/pages/join_us.html
+++ b/essal/templates/pages/join_us.html
@@ -1,12 +1,12 @@
 {% extends "templates/web.html" %}
-{% block title %} اشترك مع هُدهُد {% endblock %}
+{% block title %} اشترك مع نماء {% endblock %}
 
 {% block page_banner %}
 
     <div class="page-banner page-banner-subpage p-b-0">
         <div class="container">
             <div class="banner-slogan banner-slogan-hero">
-                <h1 class="slogan-title text-center"> اشترك مع هُدهُد </h1>
+                <h1 class="slogan-title text-center"> اشترك مع نماء </h1>
                 <h2 class="slogan-desc text-center">كن جزء من الإبداع، قم بالتسجيل الآن ليكون لك الأولوية عند
                     الإطلاقً</h2>
             </div>
@@ -26,7 +26,7 @@
                         <div class="card-body">
                             <div class="alert alert-success" role="alert"></div>
                             <div class="alert alert-danger" role="alert"></div>
-                            <h2>اشترك مع هُدهُد</h2>
+                            <h2>اشترك مع نماء</h2>
                             <form method="POST">
                                 <div class="row">
                                     <div class="col-sm-6">
