--- a/essal/templates/pages/rules.html
+++ b/essal/templates/pages/rules.html
@@ -26,17 +26,17 @@
 				<div class="rules-text">
 
 					<h1>
-						اتفاقية شروط وأحكام منظومة هُدهُد
+						اتفاقية شروط وأحكام منظومة نماء
 					</h1>
 					<h3>
 						تمهيد
 					</h3>
 					<div class="intro-text">
 						<p>
-							تغطي هذه الاتفاقية جميع المشتركين بخدمة هُدهُد  والموقع الخاص بها والمملوكة والمشغلة بواسطة شركة هُدهُد  . إن استعمال الخدمة يعني الموافقة على ما في هذه الاتفاقية من بنود بالإضافة إلى أي تعديلات مستقبلية لهذه الاتفاقية والتي ستنشر من وقت لآخر
+							تغطي هذه الاتفاقية جميع المشتركين بخدمة نماء  والموقع الخاص بها والمملوكة والمشغلة بواسطة شركة نماء  . إن استعمال الخدمة يعني الموافقة على ما في هذه الاتفاقية من بنود بالإضافة إلى أي تعديلات مستقبلية لهذه الاتفاقية والتي ستنشر من وقت لآخر
 						</p>
 						<p>
-							الرجاء قراءة هذه الاتفاقية جيدا قبل الاشتراك بخدمة هُدهُد  أو أي أجزاء منها حيث أن الاشتراك يعني الموافقة على الشروط والأحكام الواردة فيها وفي حال عدم موافقتكم على جميع الشروط والأحكام الواردة في هذه الاتفاقية أو أي نسخ محدثة منها فيجب عدم استخدام الخدمة أو أي جزء منها حيث أن هذه الاتفاقية بينك وبين شركة هُدهُد  محصورة فقط بالشروط والأحكام المذكورة في هذه الاتفاقية.
+							الرجاء قراءة هذه الاتفاقية جيدا قبل الاشتراك بخدمة نماء  أو أي أجزاء منها حيث أن الاشتراك يعني الموافقة على الشروط والأحكام الواردة فيها وفي حال عدم موافقتكم على جميع الشروط والأحكام الواردة في هذه الاتفاقية أو أي نسخ محدثة منها فيجب عدم استخدام الخدمة أو أي جزء منها حيث أن هذه الاتفاقية بينك وبين شركة نماء  محصورة فقط بالشروط والأحكام المذكورة في هذه الاتفاقية.
 						</p>
 					</div>
 
@@ -46,17 +46,17 @@
 					<div class="definition-text">
 						<ol class="">
 							<li>
-								 “شركة هُدهُد ” ويشار لها لاحقا بـ (“مزود الخدمة“)، هي مؤسسة قائمة وتعمل وفقا لقوانين المملكة العربية السعودية ومقرها الرئيس في الرياض وعنوانها: 6875 شارع الشيخ حسن بن حسين بن علي –اشبيلية الرياض 13225 – 2502 المملكة العربية السعودية.
+								 “شركة نماء ” ويشار لها لاحقا بـ (“مزود الخدمة“)، هي مؤسسة قائمة وتعمل وفقا لقوانين المملكة العربية السعودية ومقرها الرئيس في الرياض وعنوانها: 6875 شارع الشيخ حسن بن حسين بن علي –اشبيلية الرياض 13225 – 2502 المملكة العربية السعودية.
 
 							</li>
 							<li>
-								“هُدهُد ” ويشار لها لاحقا بـ (“الخدمة“) وهي خدمة برنامج إدارة موارد المنشئات المبنية على نموذج الحوسبة السحابية والمذكورة خصائصها وميزاتها في الموقع الرسمي للخدمة.
+								“نماء ” ويشار لها لاحقا بـ (“الخدمة“) وهي خدمة برنامج إدارة موارد المنشئات المبنية على نموذج الحوسبة السحابية والمذكورة خصائصها وميزاتها في الموقع الرسمي للخدمة.
 							</li>
 							<li>
 								“المشترك” هو الفرد أو الجهة (سواء كانت تجارية أو حكومية أو غير ربحية) التي توفر لها “الخدمة“.
 							</li>
 							<li>
-								“موقع هُدهُد” ويشار له لاحقا بالـ “الموقع” هو موقع على الإنترنت يحوي معلومات وملفات مرئية وصوتية للتعريف بالخدمة وشرح لميزاتها وطرق استخدامها وطريقة الاشتراك بها بالإضافة إلى صفحة الدخول الخاصة بالمشترك.
+								“موقع نماء” ويشار له لاحقا بالـ “الموقع” هو موقع على الإنترنت يحوي معلومات وملفات مرئية وصوتية للتعريف بالخدمة وشرح لميزاتها وطرق استخدامها وطريقة الاشتراك بها بالإضافة إلى صفحة الدخول الخاصة بالمشترك.
 							</li>
 							<li>
 								 “استخدام” تعني دخول المشترك إلى الخدمة لغرض استخدام الوظائف الموجودة بها على سبيل المثال لا الحصر المحاسبة وإدارة الموارد البشرية والبيع والشراء والمشمولة في الباقة التي اختارها المشترك.
