--- a/essal/templates/pages/subscription.html
+++ b/essal/templates/pages/subscription.html
@@ -9,8 +9,8 @@
 		<div class="container">
 			<div class="banner-slogan banner-slogan-hero">
 				<h1 class="slogan-title text-center"> الباقات والأسعار  </h1>
-				<h2 class="slogan-desc text-center">اشترك الآن وتمتع باستخدام مزايا وتطبيقات هُدهُد، مع الإعداد والتدريب مجاناً</h2>
-				<h2 class="slogan-desc text-center">اشترك الآن وجرب هُدهُد لمدة 30 يوماً مجاناً</h2>
+				<h2 class="slogan-desc text-center">اشترك الآن وتمتع باستخدام مزايا وتطبيقات نماء، مع الإعداد والتدريب مجاناً</h2>
+				<h2 class="slogan-desc text-center">اشترك الآن وجرب نماء لمدة 30 يوماً مجاناً</h2>
 			</div>
 		</div>
 		<!-- /.banner-tabs -->
