--- a/essal/public/css/custom.css
+++ b/essal/public/css/custom.css
@@ -10,22 +10,28 @@
     content: "";
     width: 100%;
     min-width: 700px;
-    background: #fb613b;
-    background: linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: -ms-linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: -moz-linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: -o-linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: -webkit-linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
+
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a1c242+0,257e49+100 */
+    background: #a1c242; /* Old browsers */
+    background: -moz-linear-gradient(left, #a1c242 0%, #257e49 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #a1c242 0%, #257e49 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #a1c242 0%, #257e49 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a1c242', endColorstr='#257e49', GradientType=1); /* IE6-9 */
+
 }
 
 [data-path="login"] .page-navbar {
-    background: linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%) !important;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a1c242+0,257e49+100 */
+    background: #a1c242 !important; /* Old browsers */
+    background: -moz-linear-gradient(left, #a1c242 0%, #257e49 100%) !important; /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #a1c242 0%, #257e49 100%) !important; /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #a1c242 0%, #257e49 100%) !important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a1c242', endColorstr='#257e49', GradientType=1) !important; /* IE6-9 */
     height: 120px;
 }
 
 .btn-login, .btn-signup, .btn-forgot {
-    background: #fb613b !important;
+    background: #257e49 !important;
     color: white !important;
 }
 
@@ -39,50 +45,49 @@
     height: 100%;
     min-width: 700px;
     border: none;
-    background: #fb613b;
-    background: linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: -ms-linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: -moz-linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: -o-linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: -webkit-linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a1c242+0,257e49+100 */
+    background: #a1c242; /* Old browsers */
+    background: -moz-linear-gradient(left, #a1c242 0%, #257e49 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #a1c242 0%, #257e49 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #a1c242 0%, #257e49 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a1c242', endColorstr='#257e49', GradientType=1); /* IE6-9 */
 }
 
 .btn-primary-light {
     color: #fff;
-    background-color: #fb613b;
-    border-color: #be633d;
+    background-color: #257e49;
+    border-color: #257e49;
 }
 
 .icon {
-    color: #fb613b;
+    color: #257e49;
 }
 
 .btn-primary.btn-outline {
-    color: #fb613b;
+    color: #257e49;
 }
 
 .btn-primary {
-    border-color: #fb613b;
-    background-color: #fb613b;
+    border-color: #257e49;
+    background-color: #257e49;
 }
 
 .btn-primary.btn-outline:hover, .btn-primary.btn-outline:active, .btn-primary.btn-outline.active {
-    background-color: #fb613b;
-    border-color: #fb613b;
+    background-color: #257e49;
+    border-color: #257e49;
     color: #fff;
 }
 
 .btn-primary-light:focus, .btn-primary-light.focus, .btn-primary-light:active, .btn-primary-light.active, .open > .dropdown-toggle.btn-primary-light, .btn-primary-light:hover {
     color: #fff;
-    background-color: #be633d;
-    border-color: #be633d;
+    background-color: #257e49;
+    border-color: #257e49;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary.focus, .btn-primary:active, .btn-primary.active, .open > .btn-primary {
     color: #fff;
-    background-color: #be633d;
-    border-color: #be633d;
+    background-color: #257e49;
+    border-color: #257e49;
 }
 
 .btn-primary:active:hover, .btn-primary.active:hover, .open > .dropdown-toggle.btn-primary:hover, .btn-primary:active:focus, .btn-primary.active:focus, .open > .dropdown-toggle.btn-primary:focus, .btn-primary:active.focus, .btn-primary.active.focus, .open > .dropdown-toggle.btn-primary.focus {
@@ -92,11 +97,11 @@
 }
 
 .page-footer ul > li > a:hover {
-    color: #fb613b;
+    color: #257e49;
 }
 
 .slogan-desc {
-    color: rgba(255, 226, 196, 0.8);
+    color: rgb(243, 243, 243);
 }
 
 .play {
@@ -107,13 +112,12 @@
     right: 0;
     z-index: 1001;
     cursor: pointer;
-    background: #be633d;
-    background: linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: -ms-linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: -moz-linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: -o-linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: -webkit-linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a1c242+0,257e49+100 */
+    background: #a1c242; /* Old browsers */
+    background: -moz-linear-gradient(left, #a1c242 0%, #257e49 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #a1c242 0%, #257e49 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #a1c242 0%, #257e49 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a1c242', endColorstr='#257e49', GradientType=1); /* IE6-9 */
     -webkit-transition: all .25s ease-in-out;
     -moz-transition: all .25s ease-in-out;
     transition: all .25s ease-in-out;
@@ -130,7 +134,7 @@
 
 @media (max-width: 767px) {
     .navbar-open .navbar-toggle span {
-        background-color: #fb613b;
+        background-color: #257e49;
     }
 }
 
@@ -195,4 +199,9 @@
 .browser-xlg {
     min-height: 391px;
     height: auto;
+}
+
+.section-image {
+    max-width: 250pt;
+    margin: 0 auto;
 }
