--- a/essal/public/css/desktop-custom.css
+++ b/essal/public/css/desktop-custom.css
@@ -1,9 +1,9 @@
 #page-desktop {
-    background: #be633d;
-    background: linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: -ms-linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: -moz-linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: -o-linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: -webkit-linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
-    background-image: linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a1c242+0,257e49+100 */
+    background: #a1c242; /* Old browsers */
+    background: -moz-linear-gradient(left, #a1c242 0%, #257e49 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #a1c242 0%, #257e49 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #a1c242 0%, #257e49 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a1c242', endColorstr='#257e49', GradientType=1); /* IE6-9 */
+
 }
