--- a/essal/templates/includes/footer/top_footer.html
+++ b/essal/templates/includes/footer/top_footer.html
@@ -4,9 +4,9 @@
 					<div class="col-xs-3">
 						<h4>الرئيسية</h4>
 						<ul>
-							<li><a href="/about-us">تعرّف على هُدهُد</a></li>
+							<li><a href="/about-us">تعرّف على نماء</a></li>
 							<li><a href="/features">المميزات</a></li>
-							<li><a href="/join_us">اشترك مع هُدهُد</a></li>
+							<li><a href="/join_us">اشترك مع نماء</a></li>
 						</ul>
 					</div>
 					<div class="col-xs-3">
@@ -23,7 +23,7 @@
 {#							<li><a href="/details?title=نظام ادارة المخازن">إدارة المخازن</a></li>#}
 {#                            <li><a href="/details?title=نظام ادارة المهام">إدارة المهام و الأنشطة</a></li>#}
 {#                            <li><a href="/details?title=مدير الملفات">إدارة الملفات</a></li>#}
-{#                            <li><a href="https://www.youtube.com/channel/UCKujtN211okUH13pzDfcPdw">قناة هُدهُد التعليمية</a></li>#}
+{#                            <li><a href="https://www.youtube.com/channel/UCKujtN211okUH13pzDfcPdw">قناة نماء التعليمية</a></li>#}
 {#                            <li><a href="javascript:void(0)">أرشفة دورية</a></li>#}
 {#                            <li><a href="javascript:void(0)">تشفير البيانات</a></li>#}
 
@@ -38,7 +38,7 @@
 							<li><a href="javascript:void(0)">إدارة المخازن</a></li>
                             <li><a href="javascript:void(0)">إدارة المهام و الأنشطة</a></li>
                             <li><a href="javascript:void(0)">إدارة الملفات</a></li>
-                            <li><a href="javascript:void(0)">قناة هُدهُد التعليمية</a></li>
+                            <li><a href="javascript:void(0)">قناة نماء التعليمية</a></li>
                             <li><a href="javascript:void(0)">أرشفة دورية</a></li>
                             <li><a href="javascript:void(0)">تشفير البيانات</a></li>
 						</ul>
@@ -49,10 +49,10 @@
 							<li><a href="/common_questions.html">الأسئلة الشائعة</a></li>
 {#							<li><a href="api/index.html">دليل المستخدم</a></li>#}
 {#							<li><a href="docs/index.html">فيديوهات تعليمية   </a></li>#}
-{#                            <li><a href="/essal_blog.html">مدونة هُدهُد</a></li>#}
+{#                            <li><a href="/essal_blog.html">مدونة نماء</a></li>#}
 							<li><a href="javascript:void(0)">دليل المستخدم</a></li>
 							<li><a href="javascript:void(0)">فيديوهات تعليمية   </a></li>
-							<li><a href="javascript:void(0)">مدونة هُدهُد</a></li>
+							<li><a href="javascript:void(0)">مدونة نماء</a></li>
 						</ul>
 					</div>
 					<div class="col-xs-3">
@@ -62,7 +62,7 @@
 {#							<li><a href="/about-us.html">نبذة عن إصدارات الشركة</a></li>#}
 {#							<li><a href="/team.html">طاقم العمل</a></li>#}
 							<!--<li><a href="affiliate/index.html">شهادات تقدير العملاء</a></li>-->
-							<!--<li><a href="corporate/careers/index.html">روايات هُدهُد</a></li>-->
+							<!--<li><a href="corporate/careers/index.html">روايات نماء</a></li>-->
     						<li><a href="/contact-us">اتصل بنا</a></li>
 							<li></li>
 						</ul>
