--- a/essal/templates/pages/price.html
+++ b/essal/templates/pages/price.html
@@ -7,9 +7,9 @@
     <div class="container">
         <div class="banner-slogan banner-slogan-hero">
             <h1 class="slogan-title text-center"> الباقات والأسعار </h1>
-            <h2 class="slogan-desc text-center">اشترك الآن وتمتع باستخدام مزايا وتطبيقات هُدهُد، مع الإعداد والتدريب
+            <h2 class="slogan-desc text-center">اشترك الآن وتمتع باستخدام مزايا وتطبيقات نماء، مع الإعداد والتدريب
                 مجاناً</h2>
-            <h2 class="slogan-desc text-center">اشترك الآن وجرب هُدهُد لمدة 30 يوماً مجاناً</h2>
+            <h2 class="slogan-desc text-center">اشترك الآن وجرب نماء لمدة 30 يوماً مجاناً</h2>
         </div>
     </div>
     <!-- /.banner-tabs -->
@@ -709,13 +709,13 @@
     <!-- /.page-section -->
     <div class="page-section section-blue section-center">
         <div class="container">
-            <h2 class="section-title">حلّق مع هُدهُد</h2>
+            <h2 class="section-title">حلّق مع نماء</h2>
 
             <a class="btn btn-primary-light btn-lg" href="/join_us">
                 اشترك الآن
             </a>
 
-{#            <h2 class="section-title">اشترك اﻵن في هُدهُد</h2>#}
+{#            <h2 class="section-title">اشترك اﻵن في نماء</h2>#}
 {##}
 {#            <form method="post" action="" class="register-form">#}
 {#                <input type="hidden" name="action" value="register"/>#}
