--- a/essal/templates/pages/about-us.html
+++ b/essal/templates/pages/about-us.html
@@ -9,7 +9,7 @@
                 <div class="banner-slogan banner-slogan-hero">
                     <h1 class="slogan-title text-center">أهلا بك في نماء  </h1>
 
-                    <h2 class="slogan-desc text-center"> <span class="out-goal-txt">رسالتنا:</span> توفير منظومة إدارية متكاملة للجمعيات الخيرية، ذات إحترافية وكفائة عالية، وتتميز بخدمة دعم فني متكاملة، لنحقق بذلك أعلى رضا لعملائنا الذين هم جوهر نجاحنا.</h2>
+                    <h2 class="slogan-desc text-center"> <span class="out-goal-txt">رسالتنا:</span> توفير منظومة إدارية متكاملة للمنظمات الغير ربحية، ذات إحترافية وكفائة عالية، وتتميز بخدمة دعم فني متكاملة، لنحقق بذلك أعلى رضا لعملائنا الذين هم جوهر نجاحنا.</h2>
                 </div>
 
                   <div class="banner-tabs tabs-responsive">
@@ -49,7 +49,7 @@
                         <h2 class="section-title">تعرف علينا أكثر...</h2>
 
                         <p class="section-desc">
-                           هدهد - أكثر من مجرد برنامج أو نظام، بل هو منظومة متكاملة للإدارة والتحكم في المؤسسات والجمعيات الخيرية، يمكن هدهد أصحاب الجمعيات من الإبحار في عالم موارد الجمعية ليعطي تحكما كاملا بجميع بياناتها وأجزائها، إضافة إلى خدمة الدعم الفني المتكامل والتدريب الاحترافي، وتجعل اعتماد هدهد على التقنيات السحابية  عالما يمكن الوصول له من أي مكان وفي أي وقت ليضمن أفضل النتائج بأقل التكاليف وأسرع الطرق.
+                           نماء - أكثر من مجرد برنامج أو نظام، بل هو منظومة متكاملة للإدارة والتحكم في المؤسسات والمنظمات الغير ربحية، يمكن نماء أصحاب الجمعيات من الإبحار في عالم موارد الجمعية ليعطي تحكما كاملا بجميع بياناتها وأجزائها، إضافة إلى خدمة الدعم الفني المتكامل والتدريب الاحترافي، وتجعل اعتماد نماء على التقنيات السحابية  عالما يمكن الوصول له من أي مكان وفي أي وقت ليضمن أفضل النتائج بأقل التكاليف وأسرع الطرق.
                         </p>
 
 
@@ -108,7 +108,7 @@
                                 <h3 class="h4">سحابي</h3>
 
                                 <p>
-                                    من أي مكان وفي أي وقت يمكنك إدارة موارد الجمعية والربط بين فروعها بكل يسر وسهولة فهدهد يعتمد التقنيات السحابية
+                                    من أي مكان وفي أي وقت يمكنك إدارة موارد الجمعية والربط بين فروعها بكل يسر وسهولة فنماء يعتمد التقنيات السحابية
                                 </p>
                             </div>
                         </div>
