--- a/essal/templates/pages/home.html
+++ b/essal/templates/pages/home.html
@@ -7,7 +7,7 @@
             <div class="container">
                 <h3 class="slogan-title">ببساطة، تابع أعمالك أينما كنت</h3>
 
-                <h1 class="slogan-desc">نظام مالي و إداري سحابي حاصل على ثقة العديد من الجمعيات والمؤسسات الخيرية</h1>
+                <h1 class="slogan-desc">نظام مالي و إداري سحابي حاصل على ثقة العديد من الجمعيات والمنظمات الغير ربحية</h1>
                 <br>
                 <h2 class="slogan-desc"><strong>كن جزء من الإبداع، قم بالتسجيل الآن ليكون لك الأولوية عند
                     الإطلاق</strong></h2>
@@ -57,6 +57,10 @@
                         </li><li>
                             <a href="https://altqniah.sa/" target="_blank" title="التقنية المباركة">
                                 <img src="assets/essal/img/partners/taqania-logo.jpeg" alt="التقنية المباركة">
+                            </a>
+                        </li><li>
+                            <a href="http://ksu.edu.sa/en/" target="_blank" title="جامعة الملك سعود">
+                                <img src="assets/essal/img/partners/maliksoud.jpg" alt="جامعة الملك سعود">
                             </a>
                         </li>
                     </ul>
@@ -141,9 +145,8 @@
                         <a class="service" href="javascript:void(0)">
                             <i class="service-icon service-icon-compute image-shadow-sm animate zoomIn"></i>
                             <div class="service-body">
-                                <h3>مالي و إداري</h3>
-                                <p>حزمة برمجية شاملة و متميزة تتناسب مع المؤسسات الصغيرة و المتوسطة مع خدمة تطوير و دعم
-                                    فني على مدار الساعة.</p>
+                                <h3>نظام متكامل</h3>
+                                <p>نظام متكامل ومترابط في جميع أجزائه  يوفر تحكم كامل في كوادر المؤسسة والمنظمة غير الربحية.</p>
                             </div>
                         </a>
                         <!--/ .service -->
