replace some words

--- a/essal/templates/pages/home.html
+++ b/essal/templates/pages/home.html
@@ -146,7 +146,7 @@
                             <i class="service-icon service-icon-compute image-shadow-sm animate zoomIn"></i>
                             <div class="service-body">
                                 <h3>نظام متكامل</h3>
-                                <p>نظام متكامل ومترابط في جميع أجزائه  يوفر تحكم كامل في كوادر المؤسسة والمنظمة غير الربحية.</p>
+                                <p>نظام متكامل ومترابط في جميع أجزائه  يوفر تحكم كامل في موارد المؤسسة والمنظمة غير الربحية.</p>
                             </div>
                         </a>
                         <!--/ .service -->
@@ -166,7 +166,7 @@
                         <a class="service" href="javascript:void(0)">
                             <i class="service-icon service-icon-dedicated image-shadow-sm animate zoomIn"></i>
                             <div class="service-body">
-                                <h3>نظام سحابي متكامل</h3>
+                                <h3>نظام سحابي</h3>
                                 <p>جميع البيانات مخزنة سحابياً مع إمكانية الدخول لنماء من أي مكان دون تكاليف إعداد أو
                                     صيانة</p>
                             </div>
